<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="reviewAdapter"
            type="com.project.movieapp.adapters.SimpleLoadMoreRecyclerAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        tools:context=".ui.detail.DetailMoviesActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:layout_margin="@dimen/normalMargin"
                    app:cardCornerRadius="@dimen/commonCornerRadius"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_backdrop"
                    app:layout_constraintBottom_toBottomOf="@id/iv_backdrop">

                    <ImageView
                        android:id="@+id/iv_poster_path"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:background="@color/black"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normalMargin"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textActivityTitle"
                    android:textStyle="bold"
                    tools:text="Title"
                    android:textAlignment="textStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView" />

                <TextView
                    android:id="@+id/txt_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normalMargin"
                    android:layout_marginBottom="@dimen/lowMargin"
                    android:drawablePadding="@dimen/lowPadding"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textContentBody"
                    tools:text="Rating"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintBottom_toTopOf="@+id/txt_release_date"
                    app:drawableEndCompat="@drawable/ic_star" />

                <TextView
                    android:id="@+id/txt_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normalMargin"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textContentBody"
                    tools:text="Release Date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintBottom_toBottomOf="@id/cardView"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normalMargin"
                    android:layout_marginTop="@dimen/extraHighMargin"
                    android:drawablePadding="@dimen/mediumPadding"
                    android:text="@string/title_overview"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textContentTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title"
                    app:drawableStartCompat="@drawable/ic_arrow_right" />

                <TextView
                    android:id="@+id/txt_overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normalMargin"
                    android:layout_marginTop="@dimen/mediumMargin"
                    android:justificationMode="inter_word"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textContentBody"
                    tools:text="Spanning the years 1945 to 1955, a chronicle of the fictional Italian-American Corleone crime family. When organized crime family patriarch, Vito Corleone barely survives an attempt on his life, his youngest son, Michael steps in to take care of the would-be killers, launching a campaign of bloody revenge."
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normalMargin"
                    android:layout_marginTop="@dimen/extraHighMargin"
                    android:drawablePadding="@dimen/mediumPadding"
                    android:text="@string/title_trailer"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textContentTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_overview"
                    app:drawableStartCompat="@drawable/ic_arrow_right" />

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/videoView"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    app:autoPlay="false"
                    app:layout_constraintEnd_toEndOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normalMargin"
                    android:layout_marginTop="@dimen/extraHighMargin"
                    android:drawablePadding="@dimen/mediumPadding"
                    android:text="@string/title_reviews"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textContentTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/videoView"
                    app:drawableStartCompat="@drawable/ic_arrow_right" />

                <TextView
                    android:id="@+id/txt_empty_State"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    tools:text="no reviews yet"
                    android:textColor="@color/white"
                    android:textStyle="italic"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <com.scwang.smart.refresh.layout.SmartRefreshLayout
                    android:id="@+id/refresh_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_400sdp"
                    android:clipChildren="true"
                    android:clipToPadding="true"
                    app:srlDragRate="0.7"
                    app:srlHeaderMaxDragRate="1.3"
                    app:srlHeaderHeight="150dp"
                    app:srlEnableRefresh="false"
                    app:srlEnableAutoLoadMore="true"
                    app:srlHeaderInsetStart="?attr/actionBarSize"
                    app:srlHeaderTriggerRate="0.5"
                    app:layout_constraintTop_toBottomOf="@id/textView7">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:setAdapter="@{reviewAdapter}"
                        app:setupVerticalRecyclerView="@{@dimen/_10sdp}"/>
                    <com.scwang.smart.refresh.footer.ClassicsFooter
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srlAccentColor="#888"
                        app:srlClassicsSpinnerStyle="Translate"/>
                </com.scwang.smart.refresh.layout.SmartRefreshLayout>

                <LinearLayout
                    android:id="@+id/field_empty_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/textView7"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/highPadding"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_192sdp"
                        android:layout_height="@dimen/_130sdp"
                        android:adjustViewBounds="true"
                        tools:src="@drawable/ic_success" />

                    <TextView
                        style="@style/textContentTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normalMargin"
                        android:textColor="@color/white"
                        android:text="@string/error_title_not_found"
                        android:textAlignment="center"/>

                    <TextView
                        style="@style/textContentBodyStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normalMargin"
                        android:layout_marginHorizontal="@dimen/normalMargin"
                        android:textColor="@color/gray_light"
                        android:text="@string/error_body_review_not_found"/>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
